<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_back_parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_cont_parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_rate_parameters"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_offline_rate"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/text_real_time_rate"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_Inertial"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/text_inertial"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_inertial_OFF"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_default_rate"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Spinner
                android:id="@+id/spinnerInertial_RT"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="100dp"
                android:layout_height="48dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_inertial_RT"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:padding="5dp"
                android:text="@string/switch_empty"
                tools:ignore="TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_Location"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/text_location"
                android:textSize="20sp"
                android:gravity = "center_vertical"
                android:padding="5dp"
                android:textStyle="bold"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_Location_OFF"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_default_rate"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="#757575" />

            <Spinner
                android:id="@+id/spinnerLocation_RT"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="100dp"
                android:layout_height="48dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_location_RT"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="5dp"
                android:text="@string/switch_empty"
                tools:ignore="TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_CAN"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/text_can"
                android:gravity = "center_vertical"
                android:textSize= "20sp"
                android:padding="5dp"
                android:textStyle="bold"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_Can_OFF"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_default_rate"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="#757575" />

            <Spinner
                android:id="@+id/spinnerCAN_RT"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="100dp"
                android:layout_height="48dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_CAN_RT"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:padding="5dp"
                android:text="@string/switch_empty"
                tools:ignore="TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_Climatic"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/text_climatic"
                android:gravity = "center_vertical"
                android:textSize="20sp"
                android:padding="5dp"
                android:textStyle="bold"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_Climatic_OFF"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_default_rate"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="#757575"/>

            <Spinner
                android:id="@+id/spinnerClimatic_RT"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck"/>

            <Space
                android:layout_width="100dp"
                android:layout_height="48dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_climatic_RT"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:padding="5dp"
                android:text="@string/switch_empty"
                tools:ignore="TouchTargetSizeCheck" />

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>